--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
+    "coverage": "react-scripts test --env=jsdom --coverage",
     "test:single": "cross-env CI=true react-scripts test --env=jsdom"
   },
   "config": {
