--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "codecov": "3.0.0",
+    "codecov.io": "0.1.6",
     "cross-env": "5.1.1",
     "ghooks": "2.0.0",
     "react-scripts": "1.0.17"
