--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "coverage": "react-scripts test --env=jsdom --coverage",
+    "coverage": "npm test -- --coverage",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
     "test:single": "cross-env CI=true react-scripts test --env=jsdom"
   },
