--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
+sudo: false
 language: node_js
 node_js:
  - "node"
 cache:
   directories:
   - node_modules
+before_install:
+  - npm i -g codecov.io
 after_success:
   - npm run report-coverage
