--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "react-scripts": "1.0.17"
   },
   "dependencies": {
+    "enzyme": "3.2.0",
+    "enzyme-adapter-react-16": "1.1.0",
     "react": "16.1.1",
     "react-dom": "16.1.1",
-    "react-router-dom": "4.2.2"
+    "react-router-dom": "4.2.2",
+    "react-test-renderer": "16.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
