Fixed localStorage and updated codecov

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,2 +1,8 @@
 codecov:
   disable_default_path_fixes: true
+coverage:
+  status:
+    project:
+      default:
+        target: auto
+        if_not_found: success
