--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,6 @@ cache:
   - node_modules
 before_install:
   - npm i -g codecov.io
+  - npm i -g codecov
 after_success:
   - npm run report-coverage
