--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,10 @@ cache:
 before_install:
   - npm i -g codecov.io
   - npm i -g codecov
+before_script:
+  - npm prune
+script:
+  - npm run test:single
+  - npm run coverage
 after_success:
   - npm run report-coverage
