--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "codecov.io": "0.1.6",
     "cross-env": "5.1.1",
+    "fetch-mock": "5.13.1",
     "ghooks": "2.0.0",
     "react-scripts": "1.0.17"
   },
