--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "enzyme-adapter-react-16": "1.1.0",
     "react": "16.1.1",
     "react-dom": "16.1.1",
+    "react-redux": "5.0.6",
     "react-router-dom": "4.2.2",
-    "react-test-renderer": "16.1.1"
+    "react-test-renderer": "16.1.1",
+    "redux": "3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
